feat(api): support audio transcription (#887)
