# api/v1/inference_server_worker.swagger.json
@@ -213,6 +213,25 @@
         }
       }
     },
+    "v1CreateAudioTranscriptionRequest": {
+      "type": "object",
+      "properties": {
+        "file": {
+          "type": "string",
+          "format": "byte"
+        },
+        "filename": {
+          "type": "string",
+          "description": "filename is not in the OpenAI API, but it is useful to reserve the filename\nin the original form request."
+        },
+        "model": {
+          "type": "string"
+        },
+        "prompt": {
+          "type": "string"
+        }
+      }
+    },
     "v1CreateChatCompletionRequest": {
       "type": "object",
       "properties": {
@@ -495,6 +514,9 @@
         },
         "embedding": {
           "$ref": "#/definitions/v1CreateEmbeddingRequest"
+        },
+        "audioTranscription": {
+          "$ref": "#/definitions/v1CreateAudioTranscriptionRequest"
         },
         "goAway": {
           "$ref": "#/definitions/v1GoAwayRequest",
